--- a/Black-Scholes and implied volatility.ipynb
+++ b/Black-Scholes and implied volatility.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "In the following, we denote by $N(x)$ the cumulative distribution function for the standard normal distribution:\n",
     "$$\n",
-    "N(x) = \\frac{1}{\\sqrt{2 \\pi}} \\int_{0}^{x} e^{-\\frac{u^2}{2}} \\, du \\, . \n",
+    "N(x) = \\frac{1}{\\sqrt{2 \\pi}} \\int_{-\infty}^{x} e^{-\\frac{u^2}{2}} \\, du \\, . \n",
     "$$"
    ]
   },
