--- a/Euler-Maruyama Method.ipynb
+++ b/Euler-Maruyama Method.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They consider the SDE:\n",
+    "Consider the SDE:\n",
     "$$\n",
     "dx = -\\nabla U(x) \\, dt + \\sigma \\, dW_t\n",
     "$$\n",
